examples/test/testpolicy7390.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7390
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key0: value41
      key34: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value34
      podSelector:
        matchLabels:
          key41: value28
          key12: value38
